# fastapi-xgboost-deployment

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: aws-ecr.yml  main.yml
app/: main.py  schemas.py
src/: config.py  train.py
tests/: test_api.py  test_logic.py
